feat(web): switch Tailwind primary palette to lilac and update nav buttons

--- a/src/index.html
+++ b/src/index.html
@@ -16,16 +16,16 @@
         extend: {
           colors: {
             primary: {
-              50: '#f0f9ff',
-              100: '#e0f2fe',
-              200: '#bae6fd',
-              300: '#7dd3fc',
-              400: '#38bdf8',
-              500: '#0ea5e9',
-              600: '#0284c7',
-              700: '#0369a1',
-              800: '#075985',
-              900: '#0c4a6e',
+              50: '#f7f4fe',
+              100: '#ece9f9',
+              200: '#dfd4f7',
+              300: '#ccb8f2',
+              400: '#b89ae9',
+              500: '#a27ddd',
+              600: '#8b65cc',
+              700: '#744fb3',
+              800: '#5d3b99',
+              900: '#4b0082',
             }
           }
         }
